--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "test": "test"
   },
   "devDependencies": {
+    "blanket": "^1.1.6",
     "chai": "^1.9.1",
+    "coveralls": "^2.11.1",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
-    "lemonde-jshintrc": "git://github.com/lemonde/jshintrc",
-    "load-grunt-tasks": "^0.6.0",
-    "mocha": "^1.21.3",
-    "grunt-glue-js": "0.0.4",
+    "grunt-contrib-symlink": "^0.3.0",
     "grunt-contrib-uglify": "^0.5.1",
-    "mocha-lcov-reporter": "0.0.1",
-    "blanket": "^1.1.6",
-    "coveralls": "^2.11.1"
+    "grunt-glue-js": "0.0.4",
+    "lemonde-jshintrc": "git://github.com/lemonde/jshintrc",
+    "mocha": "^1.21.3",
+    "mocha-lcov-reporter": "0.0.1"
   },
   "scripts": {
     "test": "NODE_ENV=test mocha --recursive",
